syntax = "proto3";
package usersservice;

option go_package = "tuhla/services/users/proto/usersservicepb";

import "users_model.proto";

service Users {
  rpc CreateUser(CreateUserRequest) returns (usersmodel.User) {}
}

message CreateUserRequest {
  string request_id = 1;
  usersmodel.User user = 2;
}
